# Object-oriented-analysis-and-design-2

./: .gitignore
lab01/: README.md
lab01/LogisticsRoutePlanner/: LogisticsRoutePlanner.csproj  LogisticsRoutePlanner.sln  Program.cs
lab01/LogisticsRoutePlanner/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
lab01/LogisticsRoutePlanner/WithPattern/: AddTransportDialog.cs  BaseRouter.cs  DynamicRouter.cs  DynamicRouterFactory.cs  Factories.cs  IRouteResult.cs  IRouter.cs  MainFormWithPattern.cs  RouteResult.cs  RouterFactory.cs  RouterInterfaces.cs  Routers.cs
lab01/LogisticsRoutePlanner/WithoutPattern/: MainForm.cs
lab02/: README.md
lab02/WarehouseManager/: CMakeLists.txt
lab02/WarehouseManager/src/bad/: main_bad.cpp
lab02/WarehouseManager/src/good/: main_good.cpp
lab03/: README.md  quest_game_bad.py  quest_game_good.py
